image-search/template.yml
AWSTemplateFormatVersion: 2010-09-09
Transform: AWS::Serverless-2016-10-31

Parameters:

  01ApplicationName:
    Description: Please specify the application name of the resource
    Type: String

  02VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 192.168.0.0/24

  03PublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 192.168.0.0/27

  04PublicSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 192.168.0.32/27

  05PrivateSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
    Type: String
    Default: 192.168.0.64/27

  06PrivateSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
    Type: String
    Default: 192.168.0.96/27

Resources:

  ###################################################
  ## S3
  ###################################################
  S3Bucket:
    Type: 'AWS::S3::Bucket'
    Properties:
      BucketName: !GetAtt ApplicationLoadBalancer.DNSName

  S3BucketPolicy:
    Type: 'AWS::S3::BucketPolicy'
    Properties:
      Bucket: !Ref S3Bucket
      PolicyDocument:
        Statement:
          - Action: 's3:GetObject'
            Effect: Allow
            Resource:
              - !Sub arn:${AWS::Partition}:s3:::${S3Bucket}
              - !Sub arn:${AWS::Partition}:s3:::${S3Bucket}/*
            Principal: '*'
            Condition:
              StringEquals:
                aws:SourceVpce:
                  - !Ref S3VpcEndpoint

  ###################################################
  ## VPC
  ###################################################

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref 02VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${01ApplicationName}-vpc

  ###################################################
  ## PublicSubnet
  ###################################################

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub ${AWS::Region}a
      CidrBlock: !Ref 03PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${01ApplicationName}-public-subnet-1a

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub ${AWS::Region}c
      CidrBlock: !Ref 04PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${01ApplicationName}-public-subnet-1c

  ###################################################
  ## IGW
  ###################################################

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${01ApplicationName}-igw

  AttachGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  ###################################################
  ## RouteTable for PublicSubnet
  ###################################################

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub rtb-${01ApplicationName}-public-subnet

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  ###################################################
  ## PrivateSubnet related resources
  ###################################################

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub ${AWS::Region}a
      CidrBlock: !Ref 05PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${01ApplicationName}-private-subnet-1a

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub ${AWS::Region}c
      CidrBlock: !Ref 06PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${01ApplicationName}-private-subnet-1c

  ###################################################
  ## RouteTable for PrivateSubnet
  ###################################################

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub rtb-${01ApplicationName}-private-subnet

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet2

  ###################################################
  ## Security Group for S3 VPC Endpoint
  ###################################################

  S3VpcEndpointSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: !Sub ${01ApplicationName}-vpcendpoint-sg
      GroupDescription: 'Security group for vpcendpoint'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: !Ref 02VpcCIDR
          Description: 'Allow HTTP traffic from the vpc cidr'
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
          Description: 'Allow all outbound traffic'

  ###################################################
  ## Security Group for ALB
  ###################################################

  ALBSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: !Sub ${01ApplicationName}-alb-sg
      GroupDescription: 'Security group for alb'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
          Description: 'Allow HTTP traffic from the alb'
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
          Description: 'Allow all outbound traffic'

  ###################################################
  ## S3 Interface VPC Endpoint
  ###################################################

  S3VpcEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      VpcId: !Ref VPC
      SubnetIds:
        - !Ref PrivateSubnet1
      SecurityGroupIds:
        - !Ref S3VpcEndpointSecurityGroup

  ###################################################
  ## ALB
  ###################################################

  ApplicationLoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Name: !Sub ${01ApplicationName}-alb
      Scheme: "internet-facing"
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      Type: application

  TargetGroup1:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub ${01ApplicationName}-lambda-tg
      TargetType: lambda
      Targets:
      - Id: !GetAtt Lambda.Arn

  TargetGroup2:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      Name: !Sub ${01ApplicationName}-s3-tg
      Port: 443
      Protocol: HTTPS
      VpcId: !Ref VPC
      TargetType: ip
      Matcher:
        HttpCode: 200,307,405

  LoadBalancerListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - TargetGroupArn: !Ref 'TargetGroup1'
          Type: "forward"

  LoadBalancerListenerRule1:
    Type: 'AWS::ElasticLoadBalancingV2::ListenerRule'
    Properties:
      ListenerArn: !Ref LoadBalancerListener
      Priority: 1
      Conditions:
        - Field: path-pattern
          PathPatternConfig:
            Values:
              - /images/*
      Actions:
        - "Type": "forward"
          "TargetGroupArn": !Ref TargetGroup2

  ###################################################
  ## Lambda
  ###################################################

  LambdaLayer:
    Type: AWS::Serverless::LayerVersion
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      LayerName: !Sub ${01ApplicationName}-lambda-layer
      Description: Layer description
      ContentUri: layers
      CompatibleRuntimes:
        - python3.11
    Metadata:
      BuildMethod: python3.11

  Lambda:
    Type: AWS::Serverless::Function
    Properties:
      Runtime: python3.11
      Architectures:
      - x86_64
      CodeUri: app
      FunctionName: !Sub ${01ApplicationName}-lambda
      Timeout: 180
      MemorySize: 4096
      Handler: run.sh
      Environment:
        Variables:
          AWS_LAMBDA_EXEC_WRAPPER: /opt/bootstrap
          AURORA_RESOURCE_ARN: !GetAtt AuroraCluster.DBClusterArn
          SECRET_ARN: !Ref SecretForAurora
          IMAGES_S3_BUCKET: !Ref S3Bucket
          IMAGE_BASE_URL: !Sub http://${ApplicationLoadBalancer.DNSName}/images
      Policies:
        - AWSSecretsManagerGetSecretValuePolicy:
            SecretArn: !Ref SecretForAurora
        - S3CrudPolicy:
            BucketName: !Ref S3Bucket
        - Statement:
            - Sid: "BedrockScopedAccess"
              Effect: "Allow"
              Action:
                - "bedrock:InvokeModel"
              Resource:
                - "*"
            - Sid: "AuroraScopedDataAPIAccess"
              Effect: "Allow"
              Action:
                - "rds-data:ExecuteStatement"
              Resource:
                - !GetAtt AuroraCluster.DBClusterArn
      Layers:
      - !Ref LambdaLayer
      - !Sub arn:aws:lambda:${AWS::Region}:753240598075:layer:LambdaAdapterLayerX86:19


  LambdaInvokePermission:
    Type: AWS::Lambda::Permission
    Properties:
      FunctionName: !GetAtt Lambda.Arn
      Action: lambda:InvokeFunction
      Principal: elasticloadbalancing.amazonaws.com

  ######################################
  ##
  ## Secret for Aurora
  ##
  ######################################

  SecretForAurora:
    Type: AWS::SecretsManager::Secret
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      Name: database-user-for-bedrock-secret
      Description: "This is a secret."
      SecretString: '{
          "username":"bedrock_user",
          "password":"P@ssword123"
        }'

  ######################################
  ##
  ## DB Subnet Group
  ##
  ######################################

  DBSubnetGroup:
    Type: "AWS::RDS::DBSubnetGroup"
    Properties:
      DBSubnetGroupDescription: description
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

  ######################################
  ##
  ## Aurora
  ##
  ######################################

  AuroraCluster:
    Type: 'AWS::RDS::DBCluster'
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Properties:
      DatabaseName: images
      Engine: aurora-postgresql
      EngineVersion: 15.5
      DBSubnetGroupName: !Ref DBSubnetGroup
      MasterUsername: postgresql
      ManageMasterUserPassword: true
      ServerlessV2ScalingConfiguration:
        MinCapacity: 0.5
        MaxCapacity: 1.0
      EnableHttpEndpoint: true

  AuroraDBInstance:
    Type: 'AWS::RDS::DBInstance'
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Properties:
      Engine: aurora-postgresql
      DBInstanceClass: db.serverless
      DBClusterIdentifier: !Ref AuroraCluster

Outputs:
  S3VpcEndpointId:
    Description: The ID of the S3 VPC endpoint
    Value: !Select [0, !GetAtt S3VpcEndpoint.NetworkInterfaceIds]

  ApplicationLoadBalancerTargetGroupArn:
    Description: The ARN of the target group
    Value: !Ref TargetGroup2

  ApplicationLoadBalancerDNSName:
    Description: The DNS name of the load balancer
    Value: !GetAtt ApplicationLoadBalancer.DNSName

  S3Bucket:
    Description: The name of the S3 bucket
    Value: !Ref S3Bucket

  AuroraCluster:
    Description: The ID of the Aurora cluster
    Value: !Ref AuroraCluster

  AuroraResourceARN:
    Description: The ARN of the Aurora cluster
    Value: !GetAtt AuroraCluster.DBClusterArn

  AuroraAdminUserSecretArn:
    Value: !GetAtt AuroraCluster.MasterUserSecret.SecretArn
